Records: fix last serialization test that does not delegate to the canonical ctr